--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -1,9 +1,8 @@
 .Nav{
-    font-family: 'Plus Jakarta Sans', sans-serif; /* tipografía */
+    font-family: 'Plus Jakarta Sans', sans-serif; 
     font-weight: 500;      /* semibold */
-    font-size: 20px;       /* tamaño de letra */
+    font-size: 20px;
     letter-spacing: 0.4px;
-    line-height: 1.2;      /* ajustable según Figma */
     background-color:#1A0B2E;
     height: 113px;
     
